--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,6 @@ jobs:
   Windows:
     runs-on: windows-2022
     if: github.event.pull_request.draft == false
-    env:                  
-      MSBUILD_PATH: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\amd64
 
     steps:
       - uses: actions/checkout@v2
@@ -28,14 +26,22 @@ jobs:
           cd src
           git clone --depth=1 https://github.com/stevewgr/ko-vendor.git vendor
 
-      - name: Build KnightOnLine (x86)
+      - name: Build KnightOnLine
         shell: cmd
         run: |
-          cd src\game
-          "%MSBUILD_PATH%\MSBuild.exe" WarFare.sln /p:Configuration=Release
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
+          cd src
+          msbuild Game.sln -t:Clean -t:Build -p:Configuration=Release /m
+
+      - name: Build Server
+        shell: cmd
+        run: |
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
+          cd src
+          msbuild Server.sln -t:Clean -t:Build -p:Configuration=Release /m
 
       - name: Upload
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
-          name: KnightOnLine-x86-release
-          path: ./src/game/KnightOnLine.exe
+          name: x86-release
+          path: src/build/Release/*.exe
