Integrate spdlog for better logging.

--- a/src/game/KnightOnLine.vcxproj.filters
+++ b/src/game/KnightOnLine.vcxproj.filters
@@ -627,6 +627,9 @@
     <ClInclude Include="StdAfx.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="WarMessage.h" />
+    <ClInclude Include="..\engine\N3Base\N3Log.h">
+      <Filter>N3Base\Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Resource.rc">
@@ -1120,6 +1123,9 @@
     <ClCompile Include="StdAfx.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="WarMessage.cpp" />
+    <ClCompile Include="..\engine\N3Base\N3Log.cpp">
+      <Filter>N3Base\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="JvCryption.lib">
