Update DSN,UID,PWD and IPs ini defaults.
I'll clean them up in a separate PR to use instance options variable.

--- a/src/server/ItemManager/itemdb.ini
+++ b/src/server/ItemManager/itemdb.ini
@@ -1,7 +1,7 @@
 [ODBC]
-GAME_DSN=Kn_Online
-GAME_UID=knight
-GAME_PWD=knight
+GAME_DSN=kodb
+GAME_UID=kodb_user
+GAME_PWD=kodb_user
 
 [ZONE_INFO]
 GROUP_INFO=100
