--- a/src/server/LoginServer/Version.ini
+++ b/src/server/LoginServer/Version.ini
@@ -3,9 +3,9 @@ URL=wizgate.nefficient.co.kr
 PATH=pub/wizgate2/knight/upgrade
 
 [ODBC]
-DSN=Knight
-UID=sa
-PWD=
+DSN=kodb
+UID=kodb_user
+PWD=kodb_user
 TABLE=VERSION
 
 [CONFIGURATION]
